# multi-agent-consensus

./: .gitignore  README.md  pyproject.toml
blog/: BLOG_POST.md
blog/visuals/: post2-hero.html  series-hero.html
docs/: team-delete-gotcha.md
examples/code-review/: README.md  config.yaml
examples/streaming-audit/: README.md  config.yaml
examples/streaming-audit/expected-output/: gate-result.json
src/consensus/: __init__.py  cli.py  config.py  evidence.py  gate.py  models.py  orchestrator.py  roles.py
